--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://daoyeyemi.github.io/dao",
+  "homepage": "http://daoyeyemi.github.io/portfolio_dao_official",
   "name": "dao",
   "version": "0.1.0",
   "private": true,
