--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
   "main": "index.js",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/daoyeyemi/dao.git"
+    "url": "git+https://github.com/daoyeyemi/portfolio_dao_official.git"
   },
   "author": "",
   "license": "ISC",
