--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://daoyeyemi.github.io/portfolio_dao_official",
+  "homepage": "https://daoyeyemi.github.io/",
   "name": "portfolio_dao_official",
   "version": "0.1.0",
   "private": true,
@@ -56,7 +56,7 @@
     "gh-pages": "^3.1.0"
   },
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
-  "main": "index.js",
+  "main": "src/index.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/daoyeyemi/portfolio_dao_official.git"
@@ -64,6 +64,6 @@
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/daoyeyemi/dao/issues"
+    "url": "https://github.com/daoyeyemi/portfolio_dao_official/issues"
   }
 }
